--- a/packages/plugin-skillsync/package.json
+++ b/packages/plugin-skillsync/package.json
@@ -20,7 +20,8 @@
     ],
     "dependencies": {
         "@elizaos/core": "workspace:*",
-        "axios": "^1.7.7"
+        "axios": "^1.7.7",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@types/node": "^22.10.5",
@@ -34,4 +35,4 @@
     "publishConfig": {
         "access": "public"
     }
-} 
+}
